# pandoc-citeproc-preamble

./: .gitignore  CHANGELOG  CONTRIBUTING.rst  LICENSE  Makefile  README.md  pandoc-citeproc-preamble.1.pod  pandoc-citeproc-preamble.cabal  stack.yaml
.github/: PULL_REQUEST_TEMPLATE.md
debian/: changelog  control  copyright  install  lintian-overrides  manpages  rules
debian/tests/: control
examples/: default.latex
src/: pandoc-citeproc-preamble.hs
test/: output.tex  test  test.bib  test.mdwn
