name:                pandoc-citeproc-preamble
version:             1.0.0
synopsis:            Insert before the additions made by pandoc-citeproc
description:         Please see README.md
homepage:            https://github.com/spwhitton/pandoc-citeproc-preamble
license:             GPL-3
license-file:        LICENSE
author:              Sean Whitton
maintainer:          spwhitton@spwhitton.name
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable pandoc-citeproc-preamble
  hs-source-dirs:      src
  main-is:             pandoc-citeproc-preamble.hs
  build-depends:       base
                     , pandoc-types
                     , process
                     , directory
                     , filepath
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/spwhitton/pandoc-citeproc-preamble
