name:                pandoc-citeproc-preamble
version:             1.2.1
synopsis:            Insert a preamble before pandoc-citeproc's bibliography
description:         Please see README.md
homepage:            https://github.com/spwhitton/pandoc-citeproc-preamble
license:             GPL-3
license-file:        LICENSE
author:              Sean Whitton
maintainer:          spwhitton@spwhitton.name
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable pandoc-citeproc-preamble
  hs-source-dirs:      src
  main-is:             pandoc-citeproc-preamble.hs
  build-depends:       base >= 4 && < 5
                     , pandoc-types
                     , process
                     , directory
                     , filepath
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://git.spwhitton.name/pandoc-citeproc-preamble
